# MarketingAutomation-Lite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260302115200_add_sms_campaigns.py  20260303045814_add_whatsapp_campaigns.py
app/: __init__.py  config.py  database.py  main.py  whatsapp_service.py
app/api/: ab_testing.py  analytics.py  auth.py  automation_rules.py  campaigns.py  contacts.py  dashboard.py  import_export.py  lifecycle.py  scoring.py  segments.py  sms.py  tags.py  templates.py  tracking.py  webhooks.py  whatsapp.py  workflows.py
app/models/: __init__.py  ab_test.py  lead_score.py  sms_campaign.py  webhook.py  whatsapp_campaign.py
app/schemas/: __init__.py
app/services/: analytics.py  audience_builder.py  auth.py  campaign_analytics.py  campaign_scheduler.py  contact_lifecycle.py  email.py  email_validator.py  scoring_engine.py  sms_service.py  webhook_dispatcher.py  workflow_engine.py
app/tasks/: celery_app.py  email_tasks.py
tests/: conftest.py  test_ab_testing.py  test_analytics.py  test_api.py  test_audience_builder.py  test_auth.py  test_automation_rules.py  test_campaign_analytics.py  test_campaign_scheduler.py  test_email_validator.py  test_endpoints.py  test_import.py  test_lifecycle.py  test_schemas.py  test_scoring.py  test_sms_service.py  test_suppression.py  test_templates.py  test_webhooks.py  test_whatsapp.py  test_whatsapp_simple.py
